// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainEditorBasicMaterial test gameObject basic material texture test drag texture to set gameObject material map deal with specific case if drag folder into gameObject material texture,should change nothing 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-sceneTree"
  >
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Name
        </div>
      </div>
      <div>
        <article
          className="wonder-string-input"
        >
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="cube"
          />
        </article>
      </div>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          transform
        </div>
      </div>
      <article
        className="wonder-inspector-transform"
      >
        <article
          className="wonder-float-input"
        >
          <span
            className="component-label"
          >
            X : 
          </span>
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="0"
          />
        </article>
        <article
          className="wonder-float-input"
        >
          <span
            className="component-label"
          >
            Y : 
          </span>
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="0"
          />
        </article>
        <article
          className="wonder-float-input"
        >
          <span
            className="component-label"
          >
            Z : 
          </span>
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="0"
          />
        </article>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          material
        </div>
      </div>
      <article
        className="wonder-material"
      >
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              shader
            </span>
            <select
              onChange={[Function]}
              value="0"
            >
              <option
                value="0"
              >
                basic_material
              </option>
              <option
                value="1"
              >
                light_material
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-basic-material"
          >
            <article
              className="wonder-material-color"
            >
              <div
                className=""
              >
                <span
                  className=""
                >
                  color
                </span>
                <span
                  className=""
                >
                  #ffffff
                </span>
                <button
                  className=""
                  onClick={[Function]}
                >
                  pick color
                </button>
              </div>
            </article>
            <article
              className="wonder-basicMaterial-texture"
            >
              <div
                className="texture_ground"
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDrop={[Function]}
                style={
                  Object {
                    "opacity": "1",
                  }
                }
              />
              <span
                className=""
              >
                texture:
              </span>
              <img
                src="./public/img/null.jpg"
              />
              <button
                className="texture_remove"
                onClick={[Function]}
              >
                remove
              </button>
            </article>
          </article>
        </div>
      </article>
    </article>
    <article
      className="wonder-addable-component"
    >
      <button
        disabled={false}
        onClick={[Function]}
      >
        add component
      </button>
    </article>
  </article>
</article>
`;

exports[`MainEditorBasicMaterial test gameObject basic material texture test drag texture to set gameObject material map deal with specific case if drag texture-asset dragLeave gameObject material texture, should change nothing 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-sceneTree"
  >
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Name
        </div>
      </div>
      <div>
        <article
          className="wonder-string-input"
        >
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="cube"
          />
        </article>
      </div>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          transform
        </div>
      </div>
      <article
        className="wonder-inspector-transform"
      >
        <article
          className="wonder-float-input"
        >
          <span
            className="component-label"
          >
            X : 
          </span>
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="0"
          />
        </article>
        <article
          className="wonder-float-input"
        >
          <span
            className="component-label"
          >
            Y : 
          </span>
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="0"
          />
        </article>
        <article
          className="wonder-float-input"
        >
          <span
            className="component-label"
          >
            Z : 
          </span>
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="0"
          />
        </article>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          material
        </div>
      </div>
      <article
        className="wonder-material"
      >
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              shader
            </span>
            <select
              onChange={[Function]}
              value="0"
            >
              <option
                value="0"
              >
                basic_material
              </option>
              <option
                value="1"
              >
                light_material
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-basic-material"
          >
            <article
              className="wonder-material-color"
            >
              <div
                className=""
              >
                <span
                  className=""
                >
                  color
                </span>
                <span
                  className=""
                >
                  #ffffff
                </span>
                <button
                  className=""
                  onClick={[Function]}
                >
                  pick color
                </button>
              </div>
            </article>
            <article
              className="wonder-basicMaterial-texture"
            >
              <div
                className="texture_ground"
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDrop={[Function]}
                style={
                  Object {
                    "opacity": "1",
                  }
                }
              />
              <span
                className=""
              >
                texture:
              </span>
              <img
                src="./public/img/null.jpg"
              />
              <button
                className="texture_remove"
                onClick={[Function]}
              >
                remove
              </button>
            </article>
          </article>
        </div>
      </article>
    </article>
    <article
      className="wonder-addable-component"
    >
      <button
        disabled={false}
        onClick={[Function]}
      >
        add component
      </button>
    </article>
  </article>
</article>
`;

exports[`MainEditorBasicMaterial test gameObject basic material texture test drag texture to set gameObject material map test snapshot test drag texture asset into gameObject material map zone, the zone should show the texture source 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-sceneTree"
  >
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Name
        </div>
      </div>
      <div>
        <article
          className="wonder-string-input"
        >
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="cube"
          />
        </article>
      </div>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          transform
        </div>
      </div>
      <article
        className="wonder-inspector-transform"
      >
        <article
          className="wonder-float-input"
        >
          <span
            className="component-label"
          >
            X : 
          </span>
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="0"
          />
        </article>
        <article
          className="wonder-float-input"
        >
          <span
            className="component-label"
          >
            Y : 
          </span>
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="0"
          />
        </article>
        <article
          className="wonder-float-input"
        >
          <span
            className="component-label"
          >
            Z : 
          </span>
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="0"
          />
        </article>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          material
        </div>
      </div>
      <article
        className="wonder-material"
      >
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              shader
            </span>
            <select
              onChange={[Function]}
              value="0"
            >
              <option
                value="0"
              >
                basic_material
              </option>
              <option
                value="1"
              >
                light_material
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-basic-material"
          >
            <article
              className="wonder-material-color"
            >
              <div
                className=""
              >
                <span
                  className=""
                >
                  color
                </span>
                <span
                  className=""
                >
                  #ffffff
                </span>
                <button
                  className=""
                  onClick={[Function]}
                >
                  pick color
                </button>
              </div>
            </article>
            <article
              className="wonder-basicMaterial-texture"
            >
              <div
                className="texture_ground"
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDrop={[Function]}
                style={
                  Object {
                    "opacity": "1",
                  }
                }
              />
              <span
                className=""
              >
                texture:
              </span>
              <img
                src="texture3img"
              />
              <button
                className="texture_remove"
                onClick={[Function]}
              >
                remove
              </button>
            </article>
          </article>
        </div>
      </article>
    </article>
    <article
      className="wonder-addable-component"
    >
      <button
        disabled={false}
        onClick={[Function]}
      >
        add component
      </button>
    </article>
  </article>
</article>
`;

exports[`MainEditorBasicMaterial test gameObject basic material texture test drag texture to set gameObject material map test snapshot test no drag 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-sceneTree"
  >
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Name
        </div>
      </div>
      <div>
        <article
          className="wonder-string-input"
        >
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="cube"
          />
        </article>
      </div>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          transform
        </div>
      </div>
      <article
        className="wonder-inspector-transform"
      >
        <article
          className="wonder-float-input"
        >
          <span
            className="component-label"
          >
            X : 
          </span>
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="0"
          />
        </article>
        <article
          className="wonder-float-input"
        >
          <span
            className="component-label"
          >
            Y : 
          </span>
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="0"
          />
        </article>
        <article
          className="wonder-float-input"
        >
          <span
            className="component-label"
          >
            Z : 
          </span>
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="0"
          />
        </article>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          material
        </div>
      </div>
      <article
        className="wonder-material"
      >
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              shader
            </span>
            <select
              onChange={[Function]}
              value="0"
            >
              <option
                value="0"
              >
                basic_material
              </option>
              <option
                value="1"
              >
                light_material
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-basic-material"
          >
            <article
              className="wonder-material-color"
            >
              <div
                className=""
              >
                <span
                  className=""
                >
                  color
                </span>
                <span
                  className=""
                >
                  #ffffff
                </span>
                <button
                  className=""
                  onClick={[Function]}
                >
                  pick color
                </button>
              </div>
            </article>
            <article
              className="wonder-basicMaterial-texture"
            >
              <div
                className="texture_ground"
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDrop={[Function]}
                style={
                  Object {
                    "opacity": "1",
                  }
                }
              />
              <span
                className=""
              >
                texture:
              </span>
              <img
                src="./public/img/null.jpg"
              />
              <button
                className="texture_remove"
                onClick={[Function]}
              >
                remove
              </button>
            </article>
          </article>
        </div>
      </article>
    </article>
    <article
      className="wonder-addable-component"
    >
      <button
        disabled={false}
        onClick={[Function]}
      >
        add component
      </button>
    </article>
  </article>
</article>
`;

exports[`MainEditorBasicMaterial test gameObject basic material texture test drag texture to set gameObject material map test snapshot test set map when already has map, material's map should be the new one 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-sceneTree"
  >
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Name
        </div>
      </div>
      <div>
        <article
          className="wonder-string-input"
        >
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="cube"
          />
        </article>
      </div>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          transform
        </div>
      </div>
      <article
        className="wonder-inspector-transform"
      >
        <article
          className="wonder-float-input"
        >
          <span
            className="component-label"
          >
            X : 
          </span>
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="0"
          />
        </article>
        <article
          className="wonder-float-input"
        >
          <span
            className="component-label"
          >
            Y : 
          </span>
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="0"
          />
        </article>
        <article
          className="wonder-float-input"
        >
          <span
            className="component-label"
          >
            Z : 
          </span>
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="0"
          />
        </article>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          material
        </div>
      </div>
      <article
        className="wonder-material"
      >
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              shader
            </span>
            <select
              onChange={[Function]}
              value="0"
            >
              <option
                value="0"
              >
                basic_material
              </option>
              <option
                value="1"
              >
                light_material
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-basic-material"
          >
            <article
              className="wonder-material-color"
            >
              <div
                className=""
              >
                <span
                  className=""
                >
                  color
                </span>
                <span
                  className=""
                >
                  #ffffff
                </span>
                <button
                  className=""
                  onClick={[Function]}
                >
                  pick color
                </button>
              </div>
            </article>
            <article
              className="wonder-basicMaterial-texture"
            >
              <div
                className="texture_ground"
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDrop={[Function]}
                style={
                  Object {
                    "opacity": "1",
                  }
                }
              />
              <span
                className=""
              >
                texture:
              </span>
              <img
                src="texture5img"
              />
              <button
                className="texture_remove"
                onClick={[Function]}
              >
                remove
              </button>
            </article>
          </article>
        </div>
      </article>
    </article>
    <article
      className="wonder-addable-component"
    >
      <button
        disabled={false}
        onClick={[Function]}
      >
        add component
      </button>
    </article>
  </article>
</article>
`;

exports[`MainEditorBasicMaterial test gameObject basic material texture test set remove texture test snapshop test if have already set map,should remove map 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-sceneTree"
  >
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Name
        </div>
      </div>
      <div>
        <article
          className="wonder-string-input"
        >
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="cube"
          />
        </article>
      </div>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          transform
        </div>
      </div>
      <article
        className="wonder-inspector-transform"
      >
        <article
          className="wonder-float-input"
        >
          <span
            className="component-label"
          >
            X : 
          </span>
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="0"
          />
        </article>
        <article
          className="wonder-float-input"
        >
          <span
            className="component-label"
          >
            Y : 
          </span>
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="0"
          />
        </article>
        <article
          className="wonder-float-input"
        >
          <span
            className="component-label"
          >
            Z : 
          </span>
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="0"
          />
        </article>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          material
        </div>
      </div>
      <article
        className="wonder-material"
      >
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              shader
            </span>
            <select
              onChange={[Function]}
              value="0"
            >
              <option
                value="0"
              >
                basic_material
              </option>
              <option
                value="1"
              >
                light_material
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-basic-material"
          >
            <article
              className="wonder-material-color"
            >
              <div
                className=""
              >
                <span
                  className=""
                >
                  color
                </span>
                <span
                  className=""
                >
                  #ffffff
                </span>
                <button
                  className=""
                  onClick={[Function]}
                >
                  pick color
                </button>
              </div>
            </article>
            <article
              className="wonder-basicMaterial-texture"
            >
              <div
                className="texture_ground"
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDrop={[Function]}
                style={
                  Object {
                    "opacity": "1",
                  }
                }
              />
              <span
                className=""
              >
                texture:
              </span>
              <img
                src="./public/img/null.jpg"
              />
              <button
                className="texture_remove"
                onClick={[Function]}
              >
                remove
              </button>
            </article>
          </article>
        </div>
      </article>
    </article>
    <article
      className="wonder-addable-component"
    >
      <button
        disabled={false}
        onClick={[Function]}
      >
        add component
      </button>
    </article>
  </article>
</article>
`;

exports[`MainEditorBasicMaterial test gameObject basic material texture test set remove texture test snapshop test if not set map,should change nothing 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-sceneTree"
  >
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Name
        </div>
      </div>
      <div>
        <article
          className="wonder-string-input"
        >
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="cube"
          />
        </article>
      </div>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          transform
        </div>
      </div>
      <article
        className="wonder-inspector-transform"
      >
        <article
          className="wonder-float-input"
        >
          <span
            className="component-label"
          >
            X : 
          </span>
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="0"
          />
        </article>
        <article
          className="wonder-float-input"
        >
          <span
            className="component-label"
          >
            Y : 
          </span>
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="0"
          />
        </article>
        <article
          className="wonder-float-input"
        >
          <span
            className="component-label"
          >
            Z : 
          </span>
          <input
            className="input-component float-input"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="0"
          />
        </article>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          material
        </div>
      </div>
      <article
        className="wonder-material"
      >
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              shader
            </span>
            <select
              onChange={[Function]}
              value="0"
            >
              <option
                value="0"
              >
                basic_material
              </option>
              <option
                value="1"
              >
                light_material
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-basic-material"
          >
            <article
              className="wonder-material-color"
            >
              <div
                className=""
              >
                <span
                  className=""
                >
                  color
                </span>
                <span
                  className=""
                >
                  #ffffff
                </span>
                <button
                  className=""
                  onClick={[Function]}
                >
                  pick color
                </button>
              </div>
            </article>
            <article
              className="wonder-basicMaterial-texture"
            >
              <div
                className="texture_ground"
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDrop={[Function]}
                style={
                  Object {
                    "opacity": "1",
                  }
                }
              />
              <span
                className=""
              >
                texture:
              </span>
              <img
                src="./public/img/null.jpg"
              />
              <button
                className="texture_remove"
                onClick={[Function]}
              >
                remove
              </button>
            </article>
          </article>
        </div>
      </article>
    </article>
    <article
      className="wonder-addable-component"
    >
      <button
        disabled={false}
        onClick={[Function]}
      >
        add component
      </button>
    </article>
  </article>
</article>
`;

exports[`MainEditorBasicMaterial test set currentSceneTreeNode test change color should set current gameObject color test snapshot close color picker component 1`] = `
<article
  className="wonder-basic-material"
>
  <article
    className="wonder-material-color"
  >
    <div
      className=""
    >
      <span
        className=""
      >
        color
      </span>
      <span
        className=""
      >
        #ffffff
      </span>
      <button
        className=""
        onClick={[Function]}
      >
        pick color
      </button>
    </div>
  </article>
  <article
    className="wonder-basicMaterial-texture"
  >
    <div
      className="texture_ground"
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
      style={
        Object {
          "opacity": "1",
        }
      }
    />
    <span
      className=""
    >
      texture:
    </span>
    <img
      src="./public/img/null.jpg"
    />
    <button
      className="texture_remove"
      onClick={[Function]}
    >
      remove
    </button>
  </article>
</article>
`;

exports[`MainEditorBasicMaterial test set currentSceneTreeNode test change color should set current gameObject color test snapshot show color picker component for change color 1`] = `
<article
  className="wonder-basic-material"
>
  <article
    className="wonder-material-color"
  >
    <div
      className=""
    >
      <span
        className=""
      >
        color
      </span>
      <span
        className=""
      >
        #ffffff
      </span>
      <button
        className=""
        onClick={[Function]}
      >
        pick color
      </button>
      <div
        className="color-pick-item"
      >
        <div
          className="sketch-picker "
          style={
            Object {
              "MozBorderRadius": "4px",
              "MozBoxShadow": "0 0 0 1px rgba(0,0,0,.15), 0 8px 16px rgba(0,0,0,.15)",
              "OBorderRadius": "4px",
              "OBoxShadow": "0 0 0 1px rgba(0,0,0,.15), 0 8px 16px rgba(0,0,0,.15)",
              "WebkitBorderRadius": "4px",
              "WebkitBoxShadow": "0 0 0 1px rgba(0,0,0,.15), 0 8px 16px rgba(0,0,0,.15)",
              "background": "#fff",
              "borderRadius": "4px",
              "boxShadow": "0 0 0 1px rgba(0,0,0,.15), 0 8px 16px rgba(0,0,0,.15)",
              "boxSizing": "initial",
              "msBorderRadius": "4px",
              "msBoxShadow": "0 0 0 1px rgba(0,0,0,.15), 0 8px 16px rgba(0,0,0,.15)",
              "padding": "10px 10px 0",
              "width": 200,
            }
          }
        >
          <div
            style={
              Object {
                "overflow": "hidden",
                "paddingBottom": "75%",
                "position": "relative",
                "width": "100%",
              }
            }
          >
            <div
              onMouseDown={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              style={
                Object {
                  "MozBorderRadius": undefined,
                  "OBorderRadius": undefined,
                  "WebkitBorderRadius": undefined,
                  "background": "hsl(0,100%, 50%)",
                  "borderRadius": undefined,
                  "bottom": "0px",
                  "left": "0px",
                  "msBorderRadius": undefined,
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                }
              }
            >
              <style>
                
          .saturation-white {
            background: -webkit-linear-gradient(to right, #fff, rgba(255,255,255,0));
            background: linear-gradient(to right, #fff, rgba(255,255,255,0));
          }
          .saturation-black {
            background: -webkit-linear-gradient(to top, #000, rgba(0,0,0,0));
            background: linear-gradient(to top, #000, rgba(0,0,0,0));
          }
        
              </style>
              <div
                className="saturation-white"
                style={
                  Object {
                    "MozBorderRadius": undefined,
                    "OBorderRadius": undefined,
                    "WebkitBorderRadius": undefined,
                    "borderRadius": undefined,
                    "bottom": "0px",
                    "left": "0px",
                    "msBorderRadius": undefined,
                    "position": "absolute",
                    "right": "0px",
                    "top": "0px",
                  }
                }
              >
                <div
                  className="saturation-black"
                  style={
                    Object {
                      "MozBorderRadius": undefined,
                      "MozBoxShadow": undefined,
                      "OBorderRadius": undefined,
                      "OBoxShadow": undefined,
                      "WebkitBorderRadius": undefined,
                      "WebkitBoxShadow": undefined,
                      "borderRadius": undefined,
                      "bottom": "0px",
                      "boxShadow": undefined,
                      "left": "0px",
                      "msBorderRadius": undefined,
                      "msBoxShadow": undefined,
                      "position": "absolute",
                      "right": "0px",
                      "top": "0px",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "cursor": "default",
                      "left": "0%",
                      "position": "absolute",
                      "top": "0%",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "MozBorderRadius": "50%",
                        "MozBoxShadow": "0 0 0 1.5px #fff, inset 0 0 1px 1px rgba(0,0,0,.3),
            0 0 1px 2px rgba(0,0,0,.4)",
                        "MozTransform": "translate(-2px, -2px)",
                        "OBorderRadius": "50%",
                        "OBoxShadow": "0 0 0 1.5px #fff, inset 0 0 1px 1px rgba(0,0,0,.3),
            0 0 1px 2px rgba(0,0,0,.4)",
                        "OTransform": "translate(-2px, -2px)",
                        "WebkitBorderRadius": "50%",
                        "WebkitBoxShadow": "0 0 0 1.5px #fff, inset 0 0 1px 1px rgba(0,0,0,.3),
            0 0 1px 2px rgba(0,0,0,.4)",
                        "WebkitTransform": "translate(-2px, -2px)",
                        "borderRadius": "50%",
                        "boxShadow": "0 0 0 1.5px #fff, inset 0 0 1px 1px rgba(0,0,0,.3),
            0 0 1px 2px rgba(0,0,0,.4)",
                        "cursor": "hand",
                        "height": "4px",
                        "msBorderRadius": "50%",
                        "msBoxShadow": "0 0 0 1.5px #fff, inset 0 0 1px 1px rgba(0,0,0,.3),
            0 0 1px 2px rgba(0,0,0,.4)",
                        "msTransform": "translate(-2px, -2px)",
                        "transform": "translate(-2px, -2px)",
                        "width": "4px",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="flexbox-fix"
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <div
              style={
                Object {
                  "MozBoxFlex": "1",
                  "WebkitBoxFlex": "1",
                  "WebkitFlex": "1",
                  "flex": "1",
                  "msFlex": "1",
                  "padding": "4px 0",
                }
              }
            >
              <div
                style={
                  Object {
                    "height": "10px",
                    "overflow": "hidden",
                    "position": "relative",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "MozBorderRadius": undefined,
                      "MozBoxShadow": undefined,
                      "OBorderRadius": undefined,
                      "OBoxShadow": undefined,
                      "WebkitBorderRadius": undefined,
                      "WebkitBoxShadow": undefined,
                      "borderRadius": undefined,
                      "bottom": "0px",
                      "boxShadow": undefined,
                      "left": "0px",
                      "msBorderRadius": undefined,
                      "msBoxShadow": undefined,
                      "position": "absolute",
                      "right": "0px",
                      "top": "0px",
                    }
                  }
                >
                  <div
                    className="hue-horizontal"
                    onMouseDown={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    style={
                      Object {
                        "MozBorderRadius": undefined,
                        "OBorderRadius": undefined,
                        "WebkitBorderRadius": undefined,
                        "borderRadius": undefined,
                        "height": "100%",
                        "msBorderRadius": undefined,
                        "padding": "0 2px",
                        "position": "relative",
                      }
                    }
                  >
                    <style>
                      
            .hue-horizontal {
              background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0
                33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to right, #f00 0%, #ff0
                17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }

            .hue-vertical {
              background: linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%,
                #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to top, #f00 0%, #ff0 17%,
                #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }
          
                    </style>
                    <div
                      style={
                        Object {
                          "left": "0%",
                          "position": "absolute",
                        }
                      }
                    >
                      <div
                        style={
                          Object {
                            "MozBorderRadius": "1px",
                            "MozBoxShadow": "0 0 2px rgba(0, 0, 0, .6)",
                            "MozTransform": "translateX(-2px)",
                            "OBorderRadius": "1px",
                            "OBoxShadow": "0 0 2px rgba(0, 0, 0, .6)",
                            "OTransform": "translateX(-2px)",
                            "WebkitBorderRadius": "1px",
                            "WebkitBoxShadow": "0 0 2px rgba(0, 0, 0, .6)",
                            "WebkitTransform": "translateX(-2px)",
                            "background": "#fff",
                            "borderRadius": "1px",
                            "boxShadow": "0 0 2px rgba(0, 0, 0, .6)",
                            "height": "8px",
                            "marginTop": "1px",
                            "msBorderRadius": "1px",
                            "msBoxShadow": "0 0 2px rgba(0, 0, 0, .6)",
                            "msTransform": "translateX(-2px)",
                            "transform": "translateX(-2px)",
                            "width": "4px",
                          }
                        }
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                style={
                  Object {
                    "height": "10px",
                    "marginTop": "4px",
                    "overflow": "hidden",
                    "position": "relative",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "MozBorderRadius": undefined,
                      "OBorderRadius": undefined,
                      "WebkitBorderRadius": undefined,
                      "borderRadius": undefined,
                      "bottom": "0px",
                      "left": "0px",
                      "msBorderRadius": undefined,
                      "position": "absolute",
                      "right": "0px",
                      "top": "0px",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "MozBorderRadius": undefined,
                        "OBorderRadius": undefined,
                        "WebkitBorderRadius": undefined,
                        "borderRadius": undefined,
                        "bottom": "0px",
                        "left": "0px",
                        "msBorderRadius": undefined,
                        "overflow": "hidden",
                        "position": "absolute",
                        "right": "0px",
                        "top": "0px",
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "MozBorderRadius": undefined,
                          "MozBoxShadow": undefined,
                          "OBorderRadius": undefined,
                          "OBoxShadow": undefined,
                          "WebkitBorderRadius": undefined,
                          "WebkitBoxShadow": undefined,
                          "background": "url(undefined) center left",
                          "borderRadius": undefined,
                          "bottom": "0px",
                          "boxShadow": undefined,
                          "left": "0px",
                          "msBorderRadius": undefined,
                          "msBoxShadow": undefined,
                          "position": "absolute",
                          "right": "0px",
                          "top": "0px",
                        }
                      }
                    />
                  </div>
                  <div
                    style={
                      Object {
                        "MozBorderRadius": undefined,
                        "MozBoxShadow": undefined,
                        "OBorderRadius": undefined,
                        "OBoxShadow": undefined,
                        "WebkitBorderRadius": undefined,
                        "WebkitBoxShadow": undefined,
                        "background": "linear-gradient(to right, rgba(255,255,255, 0) 0%,
           rgba(255,255,255, 1) 100%)",
                        "borderRadius": undefined,
                        "bottom": "0px",
                        "boxShadow": undefined,
                        "left": "0px",
                        "msBorderRadius": undefined,
                        "msBoxShadow": undefined,
                        "position": "absolute",
                        "right": "0px",
                        "top": "0px",
                      }
                    }
                  />
                  <div
                    onMouseDown={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    style={
                      Object {
                        "height": "100%",
                        "margin": "0 3px",
                        "position": "relative",
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "left": "100%",
                          "position": "absolute",
                        }
                      }
                    >
                      <div
                        style={
                          Object {
                            "MozBorderRadius": "1px",
                            "MozBoxShadow": "0 0 2px rgba(0, 0, 0, .6)",
                            "MozTransform": "translateX(-2px)",
                            "OBorderRadius": "1px",
                            "OBoxShadow": "0 0 2px rgba(0, 0, 0, .6)",
                            "OTransform": "translateX(-2px)",
                            "WebkitBorderRadius": "1px",
                            "WebkitBoxShadow": "0 0 2px rgba(0, 0, 0, .6)",
                            "WebkitTransform": "translateX(-2px)",
                            "background": "#fff",
                            "borderRadius": "1px",
                            "boxShadow": "0 0 2px rgba(0, 0, 0, .6)",
                            "height": "8px",
                            "marginTop": "1px",
                            "msBorderRadius": "1px",
                            "msBoxShadow": "0 0 2px rgba(0, 0, 0, .6)",
                            "msTransform": "translateX(-2px)",
                            "transform": "translateX(-2px)",
                            "width": "4px",
                          }
                        }
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              style={
                Object {
                  "MozBorderRadius": "3px",
                  "OBorderRadius": "3px",
                  "WebkitBorderRadius": "3px",
                  "borderRadius": "3px",
                  "height": "24px",
                  "marginLeft": "4px",
                  "marginTop": "4px",
                  "msBorderRadius": "3px",
                  "position": "relative",
                  "width": "24px",
                }
              }
            >
              <div
                style={
                  Object {
                    "MozBorderRadius": undefined,
                    "MozBoxShadow": undefined,
                    "OBorderRadius": undefined,
                    "OBoxShadow": undefined,
                    "WebkitBorderRadius": undefined,
                    "WebkitBoxShadow": undefined,
                    "background": "url(undefined) center left",
                    "borderRadius": undefined,
                    "bottom": "0px",
                    "boxShadow": undefined,
                    "left": "0px",
                    "msBorderRadius": undefined,
                    "msBoxShadow": undefined,
                    "position": "absolute",
                    "right": "0px",
                    "top": "0px",
                  }
                }
              />
              <div
                style={
                  Object {
                    "MozBorderRadius": "2px",
                    "MozBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15), inset 0 0 4px rgba(0,0,0,.25)",
                    "OBorderRadius": "2px",
                    "OBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15), inset 0 0 4px rgba(0,0,0,.25)",
                    "WebkitBorderRadius": "2px",
                    "WebkitBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15), inset 0 0 4px rgba(0,0,0,.25)",
                    "background": "rgba(255,255,255,1)",
                    "borderRadius": "2px",
                    "bottom": "0px",
                    "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15), inset 0 0 4px rgba(0,0,0,.25)",
                    "left": "0px",
                    "msBorderRadius": "2px",
                    "msBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15), inset 0 0 4px rgba(0,0,0,.25)",
                    "position": "absolute",
                    "right": "0px",
                    "top": "0px",
                  }
                }
              />
            </div>
          </div>
          <div
            className="flexbox-fix"
            style={
              Object {
                "display": "flex",
                "paddingTop": "4px",
              }
            }
          >
            <div
              style={
                Object {
                  "MozBoxFlex": "2",
                  "WebkitBoxFlex": "2",
                  "WebkitFlex": "2",
                  "flex": "2",
                  "msFlex": "2",
                }
              }
            >
              <div
                style={
                  Object {
                    "position": "relative",
                  }
                }
              >
                <input
                  onBlur={[Function]}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder={undefined}
                  spellCheck="false"
                  style={
                    Object {
                      "MozBoxShadow": "inset 0 0 0 1px #ccc",
                      "OBoxShadow": "inset 0 0 0 1px #ccc",
                      "WebkitBoxShadow": "inset 0 0 0 1px #ccc",
                      "border": "none",
                      "boxShadow": "inset 0 0 0 1px #ccc",
                      "fontSize": "11px",
                      "msBoxShadow": "inset 0 0 0 1px #ccc",
                      "padding": "4px 10% 3px",
                      "width": "80%",
                    }
                  }
                  value="FFFFFF"
                />
                <span
                  onMouseDown={[Function]}
                  style={
                    Object {
                      "color": "#222",
                      "display": "block",
                      "fontSize": "11px",
                      "paddingBottom": "4px",
                      "paddingTop": "3px",
                      "textAlign": "center",
                      "textTransform": "capitalize",
                    }
                  }
                >
                  hex
                </span>
              </div>
            </div>
            <div
              style={
                Object {
                  "MozBoxFlex": "1",
                  "WebkitBoxFlex": "1",
                  "WebkitFlex": "1",
                  "flex": "1",
                  "msFlex": "1",
                  "paddingLeft": "6px",
                }
              }
            >
              <div
                style={
                  Object {
                    "position": "relative",
                  }
                }
              >
                <input
                  onBlur={[Function]}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder={undefined}
                  spellCheck="false"
                  style={
                    Object {
                      "MozBoxShadow": "inset 0 0 0 1px #ccc",
                      "OBoxShadow": "inset 0 0 0 1px #ccc",
                      "WebkitBoxShadow": "inset 0 0 0 1px #ccc",
                      "border": "none",
                      "boxShadow": "inset 0 0 0 1px #ccc",
                      "fontSize": "11px",
                      "msBoxShadow": "inset 0 0 0 1px #ccc",
                      "padding": "4px 10% 3px",
                      "width": "80%",
                    }
                  }
                  value="255"
                />
                <span
                  onMouseDown={[Function]}
                  style={
                    Object {
                      "color": "#222",
                      "cursor": "ew-resize",
                      "display": "block",
                      "fontSize": "11px",
                      "paddingBottom": "4px",
                      "paddingTop": "3px",
                      "textAlign": "center",
                      "textTransform": "capitalize",
                    }
                  }
                >
                  r
                </span>
              </div>
            </div>
            <div
              style={
                Object {
                  "MozBoxFlex": "1",
                  "WebkitBoxFlex": "1",
                  "WebkitFlex": "1",
                  "flex": "1",
                  "msFlex": "1",
                  "paddingLeft": "6px",
                }
              }
            >
              <div
                style={
                  Object {
                    "position": "relative",
                  }
                }
              >
                <input
                  onBlur={[Function]}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder={undefined}
                  spellCheck="false"
                  style={
                    Object {
                      "MozBoxShadow": "inset 0 0 0 1px #ccc",
                      "OBoxShadow": "inset 0 0 0 1px #ccc",
                      "WebkitBoxShadow": "inset 0 0 0 1px #ccc",
                      "border": "none",
                      "boxShadow": "inset 0 0 0 1px #ccc",
                      "fontSize": "11px",
                      "msBoxShadow": "inset 0 0 0 1px #ccc",
                      "padding": "4px 10% 3px",
                      "width": "80%",
                    }
                  }
                  value="255"
                />
                <span
                  onMouseDown={[Function]}
                  style={
                    Object {
                      "color": "#222",
                      "cursor": "ew-resize",
                      "display": "block",
                      "fontSize": "11px",
                      "paddingBottom": "4px",
                      "paddingTop": "3px",
                      "textAlign": "center",
                      "textTransform": "capitalize",
                    }
                  }
                >
                  g
                </span>
              </div>
            </div>
            <div
              style={
                Object {
                  "MozBoxFlex": "1",
                  "WebkitBoxFlex": "1",
                  "WebkitFlex": "1",
                  "flex": "1",
                  "msFlex": "1",
                  "paddingLeft": "6px",
                }
              }
            >
              <div
                style={
                  Object {
                    "position": "relative",
                  }
                }
              >
                <input
                  onBlur={[Function]}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder={undefined}
                  spellCheck="false"
                  style={
                    Object {
                      "MozBoxShadow": "inset 0 0 0 1px #ccc",
                      "OBoxShadow": "inset 0 0 0 1px #ccc",
                      "WebkitBoxShadow": "inset 0 0 0 1px #ccc",
                      "border": "none",
                      "boxShadow": "inset 0 0 0 1px #ccc",
                      "fontSize": "11px",
                      "msBoxShadow": "inset 0 0 0 1px #ccc",
                      "padding": "4px 10% 3px",
                      "width": "80%",
                    }
                  }
                  value="255"
                />
                <span
                  onMouseDown={[Function]}
                  style={
                    Object {
                      "color": "#222",
                      "cursor": "ew-resize",
                      "display": "block",
                      "fontSize": "11px",
                      "paddingBottom": "4px",
                      "paddingTop": "3px",
                      "textAlign": "center",
                      "textTransform": "capitalize",
                    }
                  }
                >
                  b
                </span>
              </div>
            </div>
            <div
              style={
                Object {
                  "MozBoxFlex": "1",
                  "WebkitBoxFlex": "1",
                  "WebkitFlex": "1",
                  "flex": "1",
                  "msFlex": "1",
                  "paddingLeft": "6px",
                }
              }
            >
              <div
                style={
                  Object {
                    "position": "relative",
                  }
                }
              >
                <input
                  onBlur={[Function]}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder={undefined}
                  spellCheck="false"
                  style={
                    Object {
                      "MozBoxShadow": "inset 0 0 0 1px #ccc",
                      "OBoxShadow": "inset 0 0 0 1px #ccc",
                      "WebkitBoxShadow": "inset 0 0 0 1px #ccc",
                      "border": "none",
                      "boxShadow": "inset 0 0 0 1px #ccc",
                      "fontSize": "11px",
                      "msBoxShadow": "inset 0 0 0 1px #ccc",
                      "padding": "4px 10% 3px",
                      "width": "80%",
                    }
                  }
                  value="100"
                />
                <span
                  onMouseDown={[Function]}
                  style={
                    Object {
                      "color": "#222",
                      "cursor": "ew-resize",
                      "display": "block",
                      "fontSize": "11px",
                      "paddingBottom": "4px",
                      "paddingTop": "3px",
                      "textAlign": "center",
                      "textTransform": "capitalize",
                    }
                  }
                >
                  a
                </span>
              </div>
            </div>
          </div>
          <div
            className="flexbox-fix"
            style={
              Object {
                "borderTop": "1px solid #eee",
                "display": "flex",
                "flexWrap": "wrap",
                "margin": "0 -10px",
                "padding": "10px 0 0 10px",
                "position": "relative",
              }
            }
          >
            <div
              style={
                Object {
                  "height": "16px",
                  "margin": "0 10px 10px 0",
                  "width": "16px",
                }
              }
            >
              <span
                onBlur={[Function]}
                onFocus={[Function]}
              >
                <div
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  style={
                    Object {
                      "MozBorderRadius": "3px",
                      "MozBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "OBorderRadius": "3px",
                      "OBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "WebkitBorderRadius": "3px",
                      "WebkitBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "background": "#D0021B",
                      "borderRadius": "3px",
                      "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "cursor": "pointer",
                      "height": "100%",
                      "msBorderRadius": "3px",
                      "msBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "outline": "none",
                      "position": "relative",
                      "width": "100%",
                    }
                  }
                  tabIndex={0}
                  title="#D0021B"
                />
              </span>
            </div>
            <div
              style={
                Object {
                  "height": "16px",
                  "margin": "0 10px 10px 0",
                  "width": "16px",
                }
              }
            >
              <span
                onBlur={[Function]}
                onFocus={[Function]}
              >
                <div
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  style={
                    Object {
                      "MozBorderRadius": "3px",
                      "MozBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "OBorderRadius": "3px",
                      "OBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "WebkitBorderRadius": "3px",
                      "WebkitBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "background": "#F5A623",
                      "borderRadius": "3px",
                      "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "cursor": "pointer",
                      "height": "100%",
                      "msBorderRadius": "3px",
                      "msBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "outline": "none",
                      "position": "relative",
                      "width": "100%",
                    }
                  }
                  tabIndex={0}
                  title="#F5A623"
                />
              </span>
            </div>
            <div
              style={
                Object {
                  "height": "16px",
                  "margin": "0 10px 10px 0",
                  "width": "16px",
                }
              }
            >
              <span
                onBlur={[Function]}
                onFocus={[Function]}
              >
                <div
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  style={
                    Object {
                      "MozBorderRadius": "3px",
                      "MozBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "OBorderRadius": "3px",
                      "OBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "WebkitBorderRadius": "3px",
                      "WebkitBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "background": "#F8E71C",
                      "borderRadius": "3px",
                      "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "cursor": "pointer",
                      "height": "100%",
                      "msBorderRadius": "3px",
                      "msBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "outline": "none",
                      "position": "relative",
                      "width": "100%",
                    }
                  }
                  tabIndex={0}
                  title="#F8E71C"
                />
              </span>
            </div>
            <div
              style={
                Object {
                  "height": "16px",
                  "margin": "0 10px 10px 0",
                  "width": "16px",
                }
              }
            >
              <span
                onBlur={[Function]}
                onFocus={[Function]}
              >
                <div
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  style={
                    Object {
                      "MozBorderRadius": "3px",
                      "MozBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "OBorderRadius": "3px",
                      "OBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "WebkitBorderRadius": "3px",
                      "WebkitBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "background": "#8B572A",
                      "borderRadius": "3px",
                      "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "cursor": "pointer",
                      "height": "100%",
                      "msBorderRadius": "3px",
                      "msBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "outline": "none",
                      "position": "relative",
                      "width": "100%",
                    }
                  }
                  tabIndex={0}
                  title="#8B572A"
                />
              </span>
            </div>
            <div
              style={
                Object {
                  "height": "16px",
                  "margin": "0 10px 10px 0",
                  "width": "16px",
                }
              }
            >
              <span
                onBlur={[Function]}
                onFocus={[Function]}
              >
                <div
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  style={
                    Object {
                      "MozBorderRadius": "3px",
                      "MozBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "OBorderRadius": "3px",
                      "OBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "WebkitBorderRadius": "3px",
                      "WebkitBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "background": "#7ED321",
                      "borderRadius": "3px",
                      "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "cursor": "pointer",
                      "height": "100%",
                      "msBorderRadius": "3px",
                      "msBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "outline": "none",
                      "position": "relative",
                      "width": "100%",
                    }
                  }
                  tabIndex={0}
                  title="#7ED321"
                />
              </span>
            </div>
            <div
              style={
                Object {
                  "height": "16px",
                  "margin": "0 10px 10px 0",
                  "width": "16px",
                }
              }
            >
              <span
                onBlur={[Function]}
                onFocus={[Function]}
              >
                <div
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  style={
                    Object {
                      "MozBorderRadius": "3px",
                      "MozBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "OBorderRadius": "3px",
                      "OBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "WebkitBorderRadius": "3px",
                      "WebkitBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "background": "#417505",
                      "borderRadius": "3px",
                      "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "cursor": "pointer",
                      "height": "100%",
                      "msBorderRadius": "3px",
                      "msBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "outline": "none",
                      "position": "relative",
                      "width": "100%",
                    }
                  }
                  tabIndex={0}
                  title="#417505"
                />
              </span>
            </div>
            <div
              style={
                Object {
                  "height": "16px",
                  "margin": "0 10px 10px 0",
                  "width": "16px",
                }
              }
            >
              <span
                onBlur={[Function]}
                onFocus={[Function]}
              >
                <div
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  style={
                    Object {
                      "MozBorderRadius": "3px",
                      "MozBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "OBorderRadius": "3px",
                      "OBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "WebkitBorderRadius": "3px",
                      "WebkitBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "background": "#BD10E0",
                      "borderRadius": "3px",
                      "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "cursor": "pointer",
                      "height": "100%",
                      "msBorderRadius": "3px",
                      "msBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "outline": "none",
                      "position": "relative",
                      "width": "100%",
                    }
                  }
                  tabIndex={0}
                  title="#BD10E0"
                />
              </span>
            </div>
            <div
              style={
                Object {
                  "height": "16px",
                  "margin": "0 10px 10px 0",
                  "width": "16px",
                }
              }
            >
              <span
                onBlur={[Function]}
                onFocus={[Function]}
              >
                <div
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  style={
                    Object {
                      "MozBorderRadius": "3px",
                      "MozBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "OBorderRadius": "3px",
                      "OBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "WebkitBorderRadius": "3px",
                      "WebkitBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "background": "#9013FE",
                      "borderRadius": "3px",
                      "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "cursor": "pointer",
                      "height": "100%",
                      "msBorderRadius": "3px",
                      "msBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "outline": "none",
                      "position": "relative",
                      "width": "100%",
                    }
                  }
                  tabIndex={0}
                  title="#9013FE"
                />
              </span>
            </div>
            <div
              style={
                Object {
                  "height": "16px",
                  "margin": "0 10px 10px 0",
                  "width": "16px",
                }
              }
            >
              <span
                onBlur={[Function]}
                onFocus={[Function]}
              >
                <div
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  style={
                    Object {
                      "MozBorderRadius": "3px",
                      "MozBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "OBorderRadius": "3px",
                      "OBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "WebkitBorderRadius": "3px",
                      "WebkitBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "background": "#4A90E2",
                      "borderRadius": "3px",
                      "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "cursor": "pointer",
                      "height": "100%",
                      "msBorderRadius": "3px",
                      "msBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "outline": "none",
                      "position": "relative",
                      "width": "100%",
                    }
                  }
                  tabIndex={0}
                  title="#4A90E2"
                />
              </span>
            </div>
            <div
              style={
                Object {
                  "height": "16px",
                  "margin": "0 10px 10px 0",
                  "width": "16px",
                }
              }
            >
              <span
                onBlur={[Function]}
                onFocus={[Function]}
              >
                <div
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  style={
                    Object {
                      "MozBorderRadius": "3px",
                      "MozBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "OBorderRadius": "3px",
                      "OBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "WebkitBorderRadius": "3px",
                      "WebkitBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "background": "#50E3C2",
                      "borderRadius": "3px",
                      "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "cursor": "pointer",
                      "height": "100%",
                      "msBorderRadius": "3px",
                      "msBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "outline": "none",
                      "position": "relative",
                      "width": "100%",
                    }
                  }
                  tabIndex={0}
                  title="#50E3C2"
                />
              </span>
            </div>
            <div
              style={
                Object {
                  "height": "16px",
                  "margin": "0 10px 10px 0",
                  "width": "16px",
                }
              }
            >
              <span
                onBlur={[Function]}
                onFocus={[Function]}
              >
                <div
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  style={
                    Object {
                      "MozBorderRadius": "3px",
                      "MozBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "OBorderRadius": "3px",
                      "OBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "WebkitBorderRadius": "3px",
                      "WebkitBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "background": "#B8E986",
                      "borderRadius": "3px",
                      "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "cursor": "pointer",
                      "height": "100%",
                      "msBorderRadius": "3px",
                      "msBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "outline": "none",
                      "position": "relative",
                      "width": "100%",
                    }
                  }
                  tabIndex={0}
                  title="#B8E986"
                />
              </span>
            </div>
            <div
              style={
                Object {
                  "height": "16px",
                  "margin": "0 10px 10px 0",
                  "width": "16px",
                }
              }
            >
              <span
                onBlur={[Function]}
                onFocus={[Function]}
              >
                <div
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  style={
                    Object {
                      "MozBorderRadius": "3px",
                      "MozBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "OBorderRadius": "3px",
                      "OBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "WebkitBorderRadius": "3px",
                      "WebkitBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "background": "#000000",
                      "borderRadius": "3px",
                      "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "cursor": "pointer",
                      "height": "100%",
                      "msBorderRadius": "3px",
                      "msBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "outline": "none",
                      "position": "relative",
                      "width": "100%",
                    }
                  }
                  tabIndex={0}
                  title="#000000"
                />
              </span>
            </div>
            <div
              style={
                Object {
                  "height": "16px",
                  "margin": "0 10px 10px 0",
                  "width": "16px",
                }
              }
            >
              <span
                onBlur={[Function]}
                onFocus={[Function]}
              >
                <div
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  style={
                    Object {
                      "MozBorderRadius": "3px",
                      "MozBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "OBorderRadius": "3px",
                      "OBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "WebkitBorderRadius": "3px",
                      "WebkitBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "background": "#4A4A4A",
                      "borderRadius": "3px",
                      "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "cursor": "pointer",
                      "height": "100%",
                      "msBorderRadius": "3px",
                      "msBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "outline": "none",
                      "position": "relative",
                      "width": "100%",
                    }
                  }
                  tabIndex={0}
                  title="#4A4A4A"
                />
              </span>
            </div>
            <div
              style={
                Object {
                  "height": "16px",
                  "margin": "0 10px 10px 0",
                  "width": "16px",
                }
              }
            >
              <span
                onBlur={[Function]}
                onFocus={[Function]}
              >
                <div
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  style={
                    Object {
                      "MozBorderRadius": "3px",
                      "MozBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "OBorderRadius": "3px",
                      "OBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "WebkitBorderRadius": "3px",
                      "WebkitBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "background": "#9B9B9B",
                      "borderRadius": "3px",
                      "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "cursor": "pointer",
                      "height": "100%",
                      "msBorderRadius": "3px",
                      "msBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "outline": "none",
                      "position": "relative",
                      "width": "100%",
                    }
                  }
                  tabIndex={0}
                  title="#9B9B9B"
                />
              </span>
            </div>
            <div
              style={
                Object {
                  "height": "16px",
                  "margin": "0 10px 10px 0",
                  "width": "16px",
                }
              }
            >
              <span
                onBlur={[Function]}
                onFocus={[Function]}
              >
                <div
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  style={
                    Object {
                      "MozBorderRadius": "3px",
                      "MozBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "OBorderRadius": "3px",
                      "OBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "WebkitBorderRadius": "3px",
                      "WebkitBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "background": "#FFFFFF",
                      "borderRadius": "3px",
                      "boxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "cursor": "pointer",
                      "height": "100%",
                      "msBorderRadius": "3px",
                      "msBoxShadow": "inset 0 0 0 1px rgba(0,0,0,.15)",
                      "outline": "none",
                      "position": "relative",
                      "width": "100%",
                    }
                  }
                  tabIndex={0}
                  title="#FFFFFF"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </article>
  <article
    className="wonder-basicMaterial-texture"
  >
    <div
      className="texture_ground"
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
      style={
        Object {
          "opacity": "1",
        }
      }
    />
    <span
      className=""
    >
      texture:
    </span>
    <img
      src="./public/img/null.jpg"
    />
    <button
      className="texture_remove"
      onClick={[Function]}
    >
      remove
    </button>
  </article>
</article>
`;
